2013-02-11  Seulgi Kim  <seulgikim@company100.net>

        [GTK] Build fix.
        https://bugs.webkit.org/show_bug.cgi?id=109516

        Reviewed by Csaba Osztrogonác.

        PluginProcessConnectionManagerMessages are omitted from messages list.

        * GNUmakefile.list.am:

2013-02-11  Tim Horton  <timothy_horton@apple.com>

        [WK2] setMinimumLayoutWidth should bail if there's no WebProcess
        https://bugs.webkit.org/show_bug.cgi?id=109512
        <rdar://problem/13093627>

        Reviewed by Anders Carlsson.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::setMinimumLayoutWidth):

2013-02-11  Anders Carlsson  <andersca@apple.com>

        PluginProcessConnectionManager should be a QueueClient
        https://bugs.webkit.org/show_bug.cgi?id=109496

        Reviewed by Andreas Kling.

        * WebProcess/Plugins/PluginProcessConnectionManager.cpp:
        (WebKit::PluginProcessConnectionManager::didReceiveMessageOnConnectionWorkQueue):
        (WebKit):
        (WebKit::PluginProcessConnectionManager::didCloseOnConnectionWorkQueue):
        * WebProcess/Plugins/PluginProcessConnectionManager.h:
        (PluginProcessConnectionManager):
        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::initializeConnection):
        * WebProcess/WebProcess.h:
        (WebProcess):

2013-02-11  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed WK2 buildfix after r142518.

        * DerivedSources.pri:

2013-02-11  Gavin Barraclough  <barraclough@apple.com>

        PluginProcess should quit immediately if idle in response to low-memory notifications
        https://bugs.webkit.org/show_bug.cgi?id=109103
        <rdar://problem/12679827>

        Reviewed by Brady Eidson.

        PluginProcess now installs a MemoryPressureHandler for the process, providing
        a custom callback which will call terminate if appropriate (if the plugin is not
        currently in use).

        * PluginProcess/PluginProcess.cpp: